# iowarp-install

./: .gitignore  README.md  build.bat  build.sh  dump.txt  install.sh  iowarp-clone  iowarp-clone.py  meta.yaml  pyproject.toml  requirements.txt  setup.py  wrpgit  wrpgit-default.yaml  wrpgit.md  wrpgit.yaml
.github/workflows/: conda.yml  docker-all.yml  docker-base.yml  docker-deps-spack.yml  docker-deps.yml  docker-test.yml  docker-user.yml  lin-cnd.yml  lin.yml  spack.yml  spack_vfd.yml  win.yml
demos/lammps/: README.md  ior.yaml  lammps.yaml
docker/: docker.sh  iowarp-base.Dockerfile  iowarp-deps-spack.Dockerfile  iowarp-deps.Dockerfile  iowarp-dev.Dockerfile  iowarp-ext-dev.Dockerfile  iowarp-test.Dockerfile  iowarp-user.Dockerfile  module_load.sh
docker/development/: docker-compose.yml
docker/test/: docker-compose.yml
docker/user/: docker-compose.yml
iowarp/: README.md
iowarp-spack/: repo.yaml
ports/argobots/: portfile.cmake  vcpkg.json
ports/content-assimilation-engine/: portfile.cmake  vcpkg.json
ports/content-transfer-engine/: CMakeLists.txt.patch  portfile.cmake  vcpkg.json
ports/cte-hermes-shm/: portfile.cmake  vcpkg.json
ports/hermes/: hrun.patch  portfile.cmake  vcpkg.json
ports/hermes-shm/: portfile.cmake  random.patch  vcpkg.json
ports/iowarp-runtime/: cmake.patch  portfile.cmake  vcpkg.json
ports/margo/: portfile.cmake  vcpkg.json
ports/mercury/: portfile.cmake  vcpkg.json
ports/thallium/: portfile.cmake  vcpkg.json
snap/: snapcraft.yaml
