[project]
name = "iowarp"
description = "IOWarp"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]
license = {text = "BSD"}
authors = [
  {name = "H. Joe Lee", email = "hyoklee@hdfgroup.org"},
]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering",
]


dependencies = [
  "numpy",
]

[project.urls]
Documentation = "https://iowarp.github.io/"
issue-tracker = "https://github.com/iowarp/iowarp-install/issues"
source-code = "https://github.com/iowarp/iowarp-install"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm>=7",
]

[tool.setuptools]
packages = ["iowarp"]

